--- a/webcomics/templates/layouts/base.html
+++ b/webcomics/templates/layouts/base.html
@@ -112,6 +112,7 @@
         }
     </style>
 
+    {% include "../components/chat_widget.html" %}
     {% include "../components/footer.html" %}
     {% include "../components/scripts_import.html" %}
     {% block extra_js %}{% endblock %}
