--- a/webcomics/templates/library.html
+++ b/webcomics/templates/library.html
@@ -394,9 +394,8 @@
 
             <div class="feed-actions" style="align-items: center; justify-content: space-between;">
                 <div style="display: flex; gap: 20px; align-items: center;">
-                    <a href="https://wa.me/521XXXXXXXXXX?text=Hola,%20me%20interesa%20comprar:%20{{ manga.nombre_del_manga|urlencode }}"
-                        class="btn-buy" target="_blank">
-                        COMPRA
+                    <a href="{% url 'product_detail' manga.id %}" class="btn-buy">
+                        COMPRAR
                     </a>
 
                     <button class="action-btn" title="Comentar">
